--- a/service/templates/blog_list.html
+++ b/service/templates/blog_list.html
@@ -35,11 +35,11 @@
                      <!--Blog Small Post Start-->
                      <div class="col-md-6 col-sm-6">
                         <div class="blog-post">
-                           <div class="blog-thumb"> <a href="#"><i class="fas fa-link"></i></a> <img src="{% static 'images/blog/b2.jpg' %}" alt=""> </div>
+                           <div class="blog-thumb"> <a href="{% url 'service:articles_det' %}"><i class="fas fa-link"></i></a> <img src="{% static 'images/blog/b2.jpg' %}" alt=""> </div>
                            <div class="post-txt">
                               <ul class="post-meta">
-                                 <li> <a href="#"><i class="fas fa-calendar-alt"></i> 29 September, 2018</a> </li>
-                                 <li> <a href="#"><i class="fas fa-comments"></i> 134 Comments</a> </li>
+                                 <li> <a href="{% url 'service:articles_det' %}"><i class="fas fa-calendar-alt"></i> 29 September, 2018</a> </li>
+                                 <li> <a href="{% url 'service:articles_det' %}"><i class="fas fa-comments"></i> 134 Comments</a> </li>
                               </ul>
                               <h5><a href="#">How you can easily market your poultry</a></h5>
                            </div>
@@ -49,7 +49,7 @@
                      <!--Blog Small Post Start-->
                      <div class="col-md-6 col-sm-6">
                         <div class="blog-post">
-                           <div class="blog-thumb"> <a href="#"><i class="fas fa-link"></i></a> <img src="{% static 'images/blog/b3.jpg' %}" alt=""> </div>
+                           <div class="blog-thumb"> <a href="{% url 'service:articles_det' %}"><i class="fas fa-link"></i></a> <img src="{% static 'images/blog/b3.jpg' %}" alt=""> </div>
                            <div class="post-txt">
                               <ul class="post-meta">
                                  <li> <a href="#"><i class="fas fa-calendar-alt"></i> 29 September, 2018</a> </li>
@@ -63,7 +63,7 @@
                      <!--Blog Small Post Start-->
                      <div class="col-md-6 col-sm-6">
                         <div class="blog-post">
-                           <div class="blog-thumb"> <a href="#"><i class="fas fa-link"></i></a> <img src="{% static 'images/blog/b4.jpg' %}" alt=""> </div>
+                           <div class="blog-thumb"> <a href="{% url 'service:articles_det' %}"><i class="fas fa-link"></i></a> <img src="{% static 'images/blog/b4.jpg' %}" alt=""> </div>
                            <div class="post-txt">
                               <ul class="post-meta">
                                  <li> <a href="#"><i class="fas fa-calendar-alt"></i> 29 September, 2018</a> </li>
@@ -77,7 +77,7 @@
                      <!--Blog Small Post Start-->
                      <div class="col-md-6 col-sm-6">
                         <div class="blog-post">
-                           <div class="blog-thumb"> <a href="#"><i class="fas fa-link"></i></a> <img src="{% static 'images/blog/b5.jpg' %}" alt=""> </div>
+                           <div class="blog-thumb"> <a href="{% url 'service:articles_det' %}"><i class="fas fa-link"></i></a> <img src="{% static 'images/blog/b5.jpg' %}" alt=""> </div>
                            <div class="post-txt">
                               <ul class="post-meta">
                                  <li> <a href="#"><i class="fas fa-calendar-alt"></i> 29 September, 2018</a> </li>
@@ -94,8 +94,8 @@
                            <div class="blog-thumb"> <a href="#"><i class="fas fa-link"></i></a> <img src="{% static 'images/blog/b6.jpg' %}" alt=""> </div>
                            <div class="post-txt">
                               <ul class="post-meta">
-                                 <li> <a href="#"><i class="fas fa-calendar-alt"></i> 29 September, 2018</a> </li>
-                                 <li> <a href="#"><i class="fas fa-comments"></i> 134 Comments</a> </li>
+                                 <li> <a href="{% url 'service:articles_det' %}"><i class="fas fa-calendar-alt"></i> 29 September, 2018</a> </li>
+                                 <li> <a href="{% url 'service:articles_det' %}"><i class="fas fa-comments"></i> 134 Comments</a> </li>
                               </ul>
                               <h5><a href="#">Advantages of POS Agrovet system</a></h5>
                            </div>
@@ -108,8 +108,8 @@
                            <div class="blog-thumb"> <a href="#"><i class="fas fa-link"></i></a> <img src="{% static 'images/blog/b7.jpg' %}" alt=""> </div>
                            <div class="post-txt">
                               <ul class="post-meta">
-                                 <li> <a href="#"><i class="fas fa-calendar-alt"></i> 29 September, 2018</a> </li>
-                                 <li> <a href="#"><i class="fas fa-comments"></i> 134 Comments</a> </li>
+                                 <li> <a href="{% url 'service:articles_det' %}"><i class="fas fa-calendar-alt"></i> 29 September, 2018</a> </li>
+                                 <li> <a href="{% url 'service:articles_det' %}"><i class="fas fa-comments"></i> 134 Comments</a> </li>
                               </ul>
                               <h5><a href="#">Emerging farm management techniques</a></h5>
                            </div>
@@ -119,11 +119,11 @@
                      <!--Blog Small Post Start-->
                      <div class="col-md-6 col-sm-6">
                         <div class="blog-post">
-                           <div class="blog-thumb"> <a href="#"><i class="fas fa-link"></i></a> <img src="{% static 'images/blog/b8.jpg' %}" alt=""> </div>
+                           <div class="blog-thumb"> <a href="{% url 'service:articles_det' %}"><i class="fas fa-link"></i></a> <img src="{% static 'images/blog/b8.jpg' %}" alt=""> </div>
                            <div class="post-txt">
                               <ul class="post-meta">
-                                 <li> <a href="#"><i class="fas fa-calendar-alt"></i> 29 September, 2018</a> </li>
-                                 <li> <a href="#"><i class="fas fa-comments"></i> 134 Comments</a> </li>
+                                 <li> <a href="{% url 'service:articles_det' %}"><i class="fas fa-calendar-alt"></i> 29 September, 2018</a> </li>
+                                 <li> <a href="{% url 'service:articles_det' %}"><i class="fas fa-comments"></i> 134 Comments</a> </li>
                               </ul>
                               <h5><a href="#">Cheaper ways to access unexplored markets</a></h5>
                            </div>
@@ -134,11 +134,11 @@
                   <div class="gt-pagination">
                      <nav>
                         <ul class="pagination">
-                           <li class="page-item"> <a class="page-link" href="#" aria-label="Previous"> <i class="fas fa-angle-left"></i> </a> </li>
-                           <li class="page-item"><a class="page-link" href="#">1</a></li>
-                           <li class="page-item active"><a class="page-link" href="#">2</a></li>
-                           <li class="page-item"><a class="page-link" href="#">3</a></li>
-                           <li class="page-item"> <a class="page-link" href="#" aria-label="Next"> <i class="fas fa-angle-right"></i> </a> </li>
+                           <li class="page-item"> <a class="page-link" href="{% url 'service:articles_det' %}" aria-label="Previous"> <i class="fas fa-angle-left"></i> </a> </li>
+                           <li class="page-item"><a class="page-link" href="{% url 'service:articles_det' %}">1</a></li>
+                           <li class="page-item active"><a class="page-link" href="{% url 'service:articles_det' %}">2</a></li>
+                           <li class="page-item"><a class="page-link" href="{% url 'service:articles_det' %}">3</a></li>
+                           <li class="page-item"> <a class="page-link" href="{% url 'service:articles_det' %}" aria-label="Next"> <i class="fas fa-angle-right"></i> </a> </li>
                         </ul>
                      </nav>
                   </div>
