--- a/service/templates/article.html
+++ b/service/templates/article.html
@@ -3,7 +3,8 @@
 {% load widget_tweaks %}
 {% block title %}sell{% endblock %}
 {% block body %}
-    <div class="container">
+    {% include 'breadcrump.html' %}
+    <div class="container animate-bottom">
         <div class="row">
             <div class=" col-6 offset-3 mt-4 pt-4 mb-5">
                 <form method="post" enctype="multipart/form-data" novalidate>
@@ -12,54 +13,81 @@
                     </div>
                     <div class="form-row">
                         {% csrf_token %}
-                        {% for field in form.visible_fields %}
-                            <div class="{% if field.name == 'image' or field.name == 'text' or field.name == 'date' or field.name == 'title' %} col-lg-12 {% else %}col-lg-6{% endif %}">
-                            {% if field.name == 'image' %}
-                                <div class="custom-file">
-                            {% else %}
-                                <div class="form-group">
-                            {% endif %}
-                        {% if not field.name == 'image' %}
-                            <label class=" font-weight-bolder">{{ field.label }}</label>
-                        {% endif %}
-                        {% if form.is_bound %}
-                            {% if field.errors %}
-                                {% if field.name == 'image' %}
-                                    {% render_field field class='custom-file-input is-invalid' %}
-                                    <label for="id_image" class="custom-file-label">Upload image....</label>
-                                {% else %}
-                                    {% render_field field class='form-control  is-invalid' %}
-                                {% endif %}
-                                {% for error in field.errors %}
-                                    <p class="text-danger pt-2">{{ error }}</p>
-
-                                {% endfor %}
-                            {% else %}
-                                {% if field.name == 'image' %}
-
-                                    {% render_field field class='custom-file-input is-valid' style="" %}
-                                    <label for="id_image" class="custom-file-label">Upload image....</label>
-                                    <p class="text-success pt-3">Upload again</p>
-                                {% else %}
-                                    {% render_field field class='form-control  is-valid' %}
-                                {% endif %}
-                            {% endif %}
-                        {% else %}
-                            {% if field.name == 'image' %}
-                                {% render_field field class="custom-file-input " %}
-                                <label for="id_image" class="custom-file-label ">Upload image....</label>
-                            {% else %}
-                                {% render_field field class='form-control ' %}
-                            {% endif %}
-                        {% endif %}
-                        {% if field.help_text %}
-                            <small class="text-muted" style="">{{ field.help_text }}</small>
-                        {% endif %}
-
-                        </div>
-                        </div>
+                        {{ form.non_field_errors }}
+                        {{ image_form.non_field_errors }}
+                        {% for hidden_field in form.hidden_fields %}
+                            {{ hidden_field.errors }}
                         {% endfor %}
-                        </div>
+                        {% for hidden_field in image_form.hidden_fields %}
+                            {{ hidden_field.errors }}
+                        {% endfor %}
+                        {% if form.non_field_errors %}
+                            <div class="alert alert-danger" role="alert">
+                                {% for error in form.non_field_errors %}
+                                    {{ error }}
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+                        {% if image_form.non_field_errors %}
+                            <div class="alert alert-danger" role="alert">
+                                {% for error in image_form.non_field_errors %}
+                                    {{ error }}
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+                        {% for field in form.visible_fields %}
+                            <div class="col-12">
+                                <div class="form-group">
+                                    {{ field.label_tag }}
+                                    {% if form.is_bound %}
+                                        {% if field.errors %}
+                                            {% render_field field class='form-control  is-invalid' %}
+                                            {% for error in field.errors %}
+                                                <div class="invalid-feedback">
+                                                    {{ error }}
+                                                </div>
+                                            {% endfor %}
+                                        {% else %}
+                                            {% render_field field class='form-control is-valid' %}
+                                        {% endif %}
+                                    {% else %}
+                                        {% render_field field class='form-control' %}
+                                    {% endif %}
+                                    {% if field.help_text %}
+                                        <small class="form-text text-muted ">{{ field.help_text }}</small>
+                                    {% endif %}
+
+                                </div>
+                            </div>
+                        {% endfor %}
+                        {% for field in image_form.visible_fields %}
+                            <div class="col-12">
+                                <div class="custom-file">
+                                    {% if form.is_bound %}
+                                        {% if field.errors %}
+                                            {% render_field field class='custom-file-input ' %}
+                                            <label class="custom-file-label is-invalid">Choose file</label>
+                                            {% for error in field.errors %}
+                                                <div class="invalid-feedback">
+                                                    {{ error }}
+                                                </div>
+                                            {% endfor %}
+                                        {% else %}
+                                            {% render_field field class='custom-file-input' %}
+                                            <label class="custom-file-labe is-invalidl">Choose file</label>
+                                        {% endif %}
+                                    {% else %}
+                                        {% render_field field class='custom-file-input' %}
+                                        <label class="custom-file-label">Choose file</label>
+                                    {% endif %}
+                                    {% if field.help_text %}
+                                        <small class="form-text text-muted ">{{ field.help_text }}</small>
+                                    {% endif %}
+
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
                         <div class=" pt-5">
                             <button class="btn btn-success" type="submit" style="width: 100%">Post</button>
                         </div>
@@ -67,6 +95,8 @@
             </div>
         </div>
     </div>
+    {% include 'footer.html' %}
+
 {% endblock %}
 {% block script %}
     <script>
