--- a/service/templates/contact.html
+++ b/service/templates/contact.html
@@ -74,9 +74,35 @@
                         </ul>
                      </div>
                   </div>
-                  <div class="col-md-6">
-                     <div class="google-map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11418.310112375979!2d-74.00986187433132!3d40.710981182716246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY!5e0!3m2!1sen!2s!4v1540972202179"></iframe>
+                  <div class="col-md-6 p-lg-5 p-md-5 text-center">
+                     <div class="contact-social ml-lg-5 pl-lg-5">
+                         <ul class="list-unstyled ">
+                             <li class="mb-3 mr-2">
+                                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                      stroke-linejoin="round" class="feather feather-facebook  icon-inline text-primary">
+                                     <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
+                                 </svg>
+                                 <a href="" class="ml-2">Facebook</a>
+                             </li>
+                             <li class="mb-3">
+                                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                      stroke-linejoin="round" class="feather feather-instagram  icon-inline text-danger">
+                                     <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                                     <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                                     <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                                 </svg>
+                                 <a href="">Instagram</a>
+                             </li>
+                             <li class="mr-3">
+                                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="34" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                      stroke-linejoin="round" class="feather feather-twitter  icon-inline text-info">
+                                     <path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path>
+                                 </svg>
+                                 <a href="">Twitter</a>
+                             </li>
+
+                         </ul>
+
                      </div>
                   </div>
                </div>
