--- a/service/templates/holder.html
+++ b/service/templates/holder.html
@@ -1,51 +1,19 @@
-{% for field in form.visible_fields %}
-                                    <div class="col-6">
-                                         <div class="input-group">
-                                            {{ field.label_tag }}
-                                            {% if form.is_bound %}
-                                                {% if field.errors %}
-                                                    {% render_field field class='form-control is-invalid' %}
-                                                    {% for error in field.errors %}
-                                                        <div class="invalid-feedback">
-                                                            {{ error }}
-                                                        </div>
-                                                    {% endfor %}
-                                                {% else %}
-                                                    {% render_field field class='form-control is-valid' %}
-                                                {% endif %}
-                                            {% else %}
-                                                {% render_field field class='form-control' %}
-                                            {% endif %}
-                                            {% if field.help_text %}
-                                            <small class="form-text text-muted">{{ field.help_text }}</small>
-                                            {% endif %}
-
-                                </div>
-                                    </div>
-                                {% endfor %}
-<!--- form Individual-->
-{% for field in form.visible_fields %}
-    <div class="col-lg-6">
-        <div class="form-group">
-            <label class="font-weight-bold">{{ field.label }}</label>
-            {% if form.is_bound %}
-                {% if field.errors %}
-                    {% render_field field class='form-control form-control-lg is-invalid' %}
-                    {% for error in field.errors %}
-                        <div class="invalid-feedback">
-                            {{ error }}
-                        </div>
-                    {% endfor %}
-                {% else %}
-                    {% render_field field class='form-control form-control-lg is-valid' %}
-                {% endif %}
-            {% else %}
-                {% render_field field class='form-control form-control-lg' %}
-            {% endif %}
-            {% if field.help_text %}
-                <small class="text-muted" style="">{{ field.help_text }}</small>
-            {% endif %}
-
+{% extends 'base_app.html' %}
+{% load static %}
+{% block body %}
+    <div class="container-fluid">
+        <div class="row">
+           <div class="col-lg-12">
+               <div class="row">
+                   <div class="col-lg-6 border">
+                       {% for img in images %}
+                           <div class="col-8 border">
+                               <img src="{{ img.image.url }}" width="50" height="50">
+                           </div>
+                       {% endfor %}
+                   </div>
+               </div>
+           </div>
         </div>
     </div>
-{% endfor %}
+{% endblock %}
