--- a/service/templates/market.html
+++ b/service/templates/market.html
@@ -3,21 +3,16 @@
 {% load widget_tweaks %}
 {% block title %}Market{% endblock %}
 {% block body %}
-    <div class="container-fluid">
+    {% include 'breadcrump.html' %}
+    <div class="container-fluid animate-bottom">
          <div class="row">
              <div class="col-lg-9 ">
-                 <div class="col-11 mt-5 ml-lg-5 ml-2">
+                 <div class="col-11 mt-5 ml-lg-5 ml-2 pr-0">
                      <form method="get" action="{% url 'service:search' %}">
                          <div class="form-row">
                              <div class="form-group col-lg-8">
                                  <input type="text" placeholder="I am looking for..." class="form-control" name="product_name">
                              </div>
-{#                             <div class=" form-group col-lg-3 ">#}
-{#                                 <input type="text" placeholder="Location" class="form-control" name="location">#}
-{#                             </div>#}
-{#                             <div class="form-group col-lg-3">#}
-{#                                 <input type="text" placeholder="Category" class="form-control" name="category">#}
-{#                             </div>#}
                              <div class="form-group col-lg-4">
                                  <button type="submit" class="btn btn-success w-100">Search</button>
                              </div>
@@ -27,19 +22,18 @@
                  <div class="col-11 mt-3 ml-lg-5 ml-2" >
                      <div class="row">
                          {% for product in products %}
-                             <div class="mark col-lg-3 col-md-3 col-sm-12 col-6 mb-5">
+                             <div class="col-lg-3 col-md-3 col-sm-12 col-6 mb-4 pr-0 ">
                                     <div class="my-card card h-100" >
                                         <div class="my-thumb">
                                             <a href="{% url 'service:product_details' product.pk%}">
                                                 <i class="fas fa-link"></i>
                                             </a>
-                                            <img class="card-img-top" src="{{ product.image.url }}">
+                                            <img class="card-img-top" src="{{product.image.url }}" alt="Product">
                                         </div>
                                             <div class="card-body">
                                                 <a href="{% url 'service:product_details' product.pk %}">
                                                     <h5 class="card-title mb-4">{{ product.product_name }}</h5>
                                                     <h6 class="card-subtitle mb-3">Ksh {{ product.price }}</h6>
-                                                    <p class="card-text mb-2"><i class="fas fa-phone"></i> 0725262728 </p>
                                                 </a>
                                                 <p class="">
                                                     <span class="fa fa-star checked"></span>
@@ -90,4 +84,5 @@
              </div>
          </div>
     </div>
+    {% include 'footer.html' %}
 {% endblock %}
