--- a/service/templates/product_details.html
+++ b/service/templates/product_details.html
@@ -1,86 +1,111 @@
 {% extends 'base_app.html' %}
 {% load static %}
+{% load widget_tweaks %}
 {% block title %} Product details{% endblock %}
 {% block body %}
-    <div class="container">
-        <div class="col-lg-8 border p-3 main-section bg-white">
-            <div class="row hedding m-0 pl-3 pt-0 pb-3">
-                {{product.product_name}}
-            </div>
-            <div class="row m-0">
-                <div class="col-lg-4 left-side-product-box pb-3">
-                    <img src="{{ product.image.url }}" class="border p-3">
-                    <span class="sub-img">
-                       <img src="{% static 'images/user.png' %}" class="border p-2" style="width: 100px; height: 100px">
-                        <img src="{% static 'images/user.png' %}" class="border p-2" style="width: 100px; height: 100px">
-                        <img src="{% static 'images/user.png' %}" class="border p-2" style="width: 100px; height: 100px">
-                </span>
+{% block style %}
+    <link href="{% static 'css/product_details.css' %}" rel="stylesheet" media="all">
+    <link href="{% static 'css/crossfade.css' %}" rel="stylesheet" media="all">
+
+{% endblock %}
+    <nav aria-label="breadcrumb" class="main-breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'service:market' %}">Market</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Details</li>
+        </ol>
+    </nav>
+    <div class="container-fluid animate-bottom">
+        <div class="details-body">
+            <div class="row">
+                <div class="col-12">
+                    <h3 class="text-danger ml-3 mt-2">{{ product.product_name }}</h3>
                 </div>
-                <div class="col-lg-8">
-                    <div class="right-side-pro-detail border p-3 m-0">
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <span class=""><i class="fas fa-user" ></i> {{ product.seller.get_full_name }}</span>
-                                <h6 class="mt-2 mb-2"><i class="fas fa-phone"></i> {{ product.seller.phone_number}}</h6>
-                                <p class="m-0 p-0"><i class="fas fa-map-marker-alt"></i> {{ product.location }}</p>
-                            </div>
-                            <div class="col-lg-12 mt-2">
-                                <p class="m-0 p-0 price-pro">KSH {{ product.price }}</p>
-                                <hr class="p-0 m-0">
-                            </div>
-                            <div class="col-lg-12 pt-2">
-                                <h5>Product Description</h5>
-                                <span>{{ product.description }}</span>
-                                <hr class="m-0 pt-2 mt-2">
-                            </div>
-                            <div class="col-lg-12">
-                                <p class="tag-section"><strong>Tag : </strong><a href="">Livestock</a></p>
-                            </div>
-                            <div class="col-lg-12">
-                                <h6>Quantity :</h6>
-                                <input type="number" class="form-control text-center w-100" value="1">
-                            </div>
-                            <div class="col-lg-12 mt-3">
-                                <div class="row">
-                                    <div class="col-lg-6 pb-2">
-                                        <a href="#" class="btn btn-danger w-100">Buy</a>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <a href="#" class="btn btn-success w-100">Contact seller</a>
-                                    </div>
+                <div class="col-md-4 mb-3">
+                    <div class="col-12 image-container">
+                        <div id="demo" class="carousel slide" data-ride="carousel">
+
+                            <!-- Indicators -->
+                            <ul class="carousel-indicators">
+                                <li data-target="#demo" data-slide-to="0" class="active"></li>
+                                <li data-target="#demo" data-slide-to="1"></li>
+                                <li data-target="#demo" data-slide-to="2"></li>
+                            </ul>
+
+                            <!-- The slideshow -->
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="{{ product.image.url }}" class="border w-100 p-2">
                                 </div>
+                                {% for image in images %}
+                                    <div class="carousel-item">
+                                        <img src="{{ image.image.url }}" class="border w-100 p-2">
+                                    </div>
+                                 {% endfor %}
+
+
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12 text-center pt-3">
-                    <h4>More Product</h4>
-                </div>
-            </div>
-            <div class="row mt-3 p-0 text-center pro-box-section">
-                <div class="col-lg-3 pb-2">
-                    <div class="pro-box border p-0 m-0">
-                        <img src="http://nicesnippets.com/demo/pd-b-image1.jpg">
+                    <div class="col-12 mb-3 mt-3">
                     </div>
-                </div>
-                <div class="col-lg-3 pb-2">
-                    <div class="pro-box border p-0 m-0">
-                        <img src="http://nicesnippets.com/demo/pd-b-images2.jpg">
+
+                    <div class="col-12 pr-0">
+                        <div class="row">
+                            <div class="col-12">
+                                {% for img in images %}
+                                    <img src="{{ img.image.url }}" class="border p-1" width="70" height="70">
+                                {% endfor %}
+                            </div>
+                        </div>
+
                     </div>
+
                 </div>
-                <div class="col-lg-3 pb-2">
-                    <div class="pro-box border p-0 m-0">
-                        <img src="http://nicesnippets.com/demo/pd-b-images3.jpg">
+
+                <div class="col-md-8 pl-lg-5 ">
+                    <div class="right-container">
+                        <div role="">
+                            <div class="col-lg-12">
+                                <span class=""><i class="fas fa-user"></i> {{ product.seller.get_full_name }}</span>
+                                <h6 class="mt-2"><i class="fas fa-phone"></i> {{ product.seller.phone_number }}</h6>
+                                <p class="text-muted"><i class="fas fa-map-marker-alt"></i> {{ product.location }}</p>
+                            </div>
+                            <div class="col-lg-12">
+                                <h6 class="text-success font-weight-bolder">Ksh {{ product.price }}</h6>
+                                <hr class="p-0"/>
+                            </div>
+                            <div class="col-lg-12">
+                                <h5>Product Description</h5>
+                                <span>{{ product.description }}</span>
+                                <hr/>
+                            </div>
+                            <div class="col-lg-12">
+                                <h5>Category : <strong class="text-primary">{{ product.category }}</strong></h5>
+                                <hr/>
+                            </div>
+                            <div class="col-lg-12 mt-4">
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <a href="#" class="btn btn-primary w-100"><i class="fas fa-phone"></i> Contact seller</a>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
-                </div>
-                <div class="col-lg-3 pb-2">
-                    <div class="pro-box border p-0 m-0">
-                        <img src="http://nicesnippets.com/demo/pd-b-images4.jpg">
-                    </div>
+
                 </div>
             </div>
         </div>
     </div>
+    {% include 'footer.html' %}
 {% endblock %}
+{% block script %}
+    <script>
+
+    </script>
+{% endblock %}
+
+</div>
