--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,12 +1,10 @@
 body {
-    margin-top: 20px;
     color: #1a202c;
     text-align: left;
     background-color: #e2e8f0;
 }
 
 .main-body {
-    padding: 15px;
 }
 
 .card {
@@ -55,4 +53,7 @@ body {
 
 .shadow-none {
     box-shadow: none !important;
+}
+.profile-products:hover{
+    background-color: #d2d2d2;
 }
