--- a/static/css/test.css
+++ b/static/css/test.css
@@ -7,7 +7,7 @@
     padding: 11px 0px;
     line-height: 16px;
     font-size: 15px;
-    font-family: 'Lato';
+    font-family: Arial, "Helvetica Neue", sans-serif;
 
 }
 
