--- a/templates/base.html
+++ b/templates/base.html
@@ -31,32 +31,48 @@
    </head>
    <body>
         <!-- top nav -->
-        <div class="container-fluid top-nav-container p-sm-2">
+        <div class="container-fluid top-nav-container">
             <div class="row">
-                <div class="top-nav-left mb-2" style="padding-left: 60px">
-                    <a href="" class="mr-3"> <i class="fas fa-phone"></i>+254 700 060423</a>
-                    <a href=""><i class="fas fa-envelope"></i> contact@tuitmei.com</a>
+                <div class="col-lg-6 mb-lg-0 mb-3">
+                    <div class="text-center">
+                        <span class="mr-4"><i class="fas fa-phone text-success" style="font-size: 20px"></i> 070866636636</span>
+                        <span ><i class="fas fa-envelope text-primary" style="font-size: 20px"></i> contact@turimei.com</span>
+                    </div>
                 </div>
-                <div class="offset-lg-6 offset-3">
-                    <div class="top-nav-right ">
-                   <a href="https://www.facebook.com/Turi_Mei-112077421380375/" ><i class="fa fa-facebook" ></i></a>
-                </div>
-                <div class="top-nav-right">
-                   <a href="" ><i class="fa fa-pinterest" ></i></a>
-                </div>
-                <div class="top-nav-right">
-                   <a href="" ><i class="fa fa-twitter" ></i></a>
-                </div>
-                <div class="top-nav-right">
-                   <a href="" ><i class="fa fa-reddit" ></i></a>
-                </div>
-                <div class="top-nav-right">
-                   <a href="" ><i class="fa fa-linkedin" ></i></a>
-                </div>
+                <div class="col-lg-6">
+                    <div class="text-center">
+                        <a href="">
+                            <span class="mr-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                 stroke-linejoin="round" class="feather feather-facebook  icon-inline text-primary">
+                                <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
+                            </svg>
+                            Facebook
+                        </span>
+                        </a>
+                       <a href="">
+                            <span class="mr-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                 stroke-linejoin="round" class="feather feather-instagram  icon-inline text-danger">
+                                <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                                <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                                <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                            </svg>
+                             Instagram
+                        </span>
+                       </a>
+                        <a href="">
+                            <span class="">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                 stroke-linejoin="round" class="feather feather-twitter  icon-inline text-info">
+                                <path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path>
+                            </svg>
+                            Twitter
+                        </span>
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
-
         </div>
        <div class="wrapper home2">
         <!--Header Start-->
