--- a/templates/base_app.html
+++ b/templates/base_app.html
@@ -5,19 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
+    <link href="{% static 'js/jquery/jquery-ui.css' %}" rel="stylesheet" media="all">
     <link rel="stylesheet" href="{% static 'bootstrap-4.6.1-dist/css/bootstrap.min.css' %}">
     <link href="{% static 'fontawesome/css/all.css' %}" rel="stylesheet" media="all">
     <link href="{% static 'css/style2.css' %}" rel="stylesheet" media="all">
     <link href="{% static 'css/card.css' %}" rel="stylesheet" media="all">
-    <link href="{% static 'css/product_details.css' %}" rel="stylesheet" media="all">
+    <link href="{% static 'css/overlay.css' %}" rel="stylesheet" media="all">
     {% block style %}{% endblock  %}
-
-
-
-
 </head>
-<body>
-<nav class="navbar navbar-expand-sm custom-navbar">
+<body onload="myFunction()" style="background: rgba(201,201,201,0.42); margin: 0;">
+<div id="loader"></div>
+<nav class="navbar navbar-expand-sm navbar-light custom-navbar">
     <div class="container">
         <div class="offset-4 offset-lg-5 top-nav">
         Hello, <strong>{{ user.username}}</strong>
@@ -25,7 +23,7 @@
     </div>
 
 </nav>
-<nav class="navbar navbar-expand-sm navbar-dark " style="background-color: #2f3538">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #184c1d">
     <!-- brand -->
     <a class="navbar-brand" href="{% url 'service:home' %}"><img src="{% static 'images/logo2.png' %}" style="height: 45px; width: 215px" > </a>
     <!-- toggler -->
@@ -35,27 +33,30 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <!-- links right -->
-    <ul class="collapse navbar-collapse " id="navbarSupportedContent">
+    <ul class="collapse navbar-collapse  mt-3" id="navbarSupportedContent">
         <ul class="navbar-nav ml-lg-2 custom-nav">
             <li class="nav-item">
-                <a href="{% url 'service:market' %}" class="nav-link pr-lg-3"><i class="fas fa-m fa-money-check-alt"></i> Market</a>
+                <a href="{% url 'service:market' %}" class="nav-link pr-lg-3 {% if request.get_full_path == '/market/' %} active {% endif %} "><i class="fas fa-m fa-money-check-alt"></i> Market</a>
             </li>
 
-            <li class="nav-item">
-                <a href="{% url 'service:sell' %}" class="nav-link pr-lg-3"><i class="fas fa-chart-area "></i> Sell Product</a>
+            <li class="nav-item links">
+                <a href="{% url 'service:sell' %}" class="nav-link pr-lg-3 {% if request.get_full_path == '/sell-product/' %} active {% endif %} "><i class="fas fa-chart-area "></i> Sell Product</a>
             </li>
             <li class="nav-item ">
-                <a href="{% url 'service:market' %}" class="nav-link pr-lg-3"><i class="fas fa-dollar-sign "></i> Buy Product</a>
+                <a href="{% url 'service:articles' %}" class="nav-link pr-lg-3 {% if request.get_full_path == '/articles/' %} active {% endif %} "><i class="fas fa-dollar-sign "></i> Buy Product</a>
             </li>
             <li class="nav-item ">
-                <a href="{% url 'service:article' %}" class="nav-link pr-lg-3"><i class="fas fa-newspaper "></i> Post Article</a>
+                <a href="{% url 'service:article' %}" class="nav-link pr-lg-3 {% if request.get_full_path == '/article-post/' %} active {% endif %} "><i class="fas fa-newspaper "></i> Post Article</a>
             </li>
         </ul>
 
 
         <ul class="navbar-nav ml-lg-auto custom-nav">
             <li class="nav-item">
-                <a href="{% url 'service:profile' %}" class="nav-link"><i class="fas fa-user"></i> {{ user.username }}</a>
+                <a href="{% url 'service:profile' %}" class="nav-link {% if request.get_full_path == '/profile/' %} active {% endif %}"><i class="fas fa-user"></i> Profile</a>
+            </li>
+            <li class="nav-item">
+                <a href="{% url 'service:profile' %}" class="nav-link {% if request.get_full_path == '/profile/' %} active {% endif %}"><i class="fas fa-shopping-cart"></i> Cart</a>
             </li>
             <li class="nav-item">
                 <a href="{% url 'service:logout' %}" class="nav-link"><i class="fas fa-sign-out-alt"></i> Log out</a>
@@ -64,14 +65,28 @@
         </ul>
     </ul>
 
-
     </div>
 </nav>
 {% block body %}
 {% endblock %}
+
+
 <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+<script src="{% static 'js/jquery/jquery-ui.min' %}"></script>
 <script src="{% static 'js/popper.min.js' %}"></script>
 <script src="{% static 'bootstrap-4.6.1-dist/js/bootstrap.min.js' %}"></script>
+<script>
+    var myVar;
+
+    function myFunction() {
+        myVar = setTimeout(showPage, 600);
+    }
+
+    function showPage() {
+        document.getElementById("loader").style.display = "none";
+        document.getElementById("myDiv").style.display = "block";
+    }
+</script>
 {% block script %}
 
 {% endblock %}
